--- a/nx.json
+++ b/nx.json
@@ -40,8 +40,20 @@
         "targetName": "test"
       },
       "exclude": [
-        "apps/upload_workspace-e2e/**/*"
+        "apps/upload_workspace-e2e/**/*",
+        "apps/api_gateway-e2e/**/*",
+        "apps/import_workspace-e2e/**/*"
       ]
+    },
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview",
+        "buildDepsTargetName": "build-deps",
+        "watchDepsTargetName": "watch-deps"
+      }
     }
   ],
   "targetDefaults": {
